--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "name": "hazel-grace-styles",
     "version": "0.1.0",
-    "homepage": "https://Mudi-Igbinoba.github.io/HGS",
+    "homepage": "https://Mudi-Igbinoba.github.io/",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.3",
-        "express": "^4.18.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
         "react-dom": "^18.1.0",
@@ -25,6 +24,7 @@
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "build-localhost": "PUBLIC-URL=/ react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
