--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hazel-grace-styles",
     "version": "0.1.0",
-    "homepage": "https://Mudi-Igbinoba.github.io/",
+    "homepage": ".",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
