--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
     "homepage": ".",
     "private": true,
     "dependencies": {
+        "@chec/commerce.js": "^2.8.0",
+        "@fortawesome/fontawesome-svg-core": "^6.1.2",
+        "@fortawesome/free-regular-svg-icons": "^6.1.2",
+        "@fortawesome/free-solid-svg-icons": "^6.1.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.3",
+        "font-awesome": "^4.7.0",
+        "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.3.1",
+        "react-lazy-load-image-component": "^1.5.5",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "string-strip-html": "^11.2.0",
         "web-vitals": "^2.1.4"
     },
     "overrides": {
