--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "react-bootstrap": "^2.4.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.3.1",
-        "react-lazy-load-image-component": "^1.5.5",
+        "react-lazy-load-image-component": "^1.5.6",
+        "react-masonry-css": "^1.0.16",
         "react-paystack": "^4.0.1",
         "react-router-dom": "^6.3.0",
+        "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.1",
         "react-use-cart": "^1.13.0",
         "string-strip-html": "^11.2.0",
