--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.3.5",
         "bootstrap": "^5.1.3",
         "font-awesome": "^4.7.0",
         "nanoid": "^4.0.1",
@@ -24,6 +25,7 @@
         "react-lazy-load-image-component": "^1.5.6",
         "react-masonry-css": "^1.0.16",
         "react-paystack": "^4.0.1",
+        "react-responsive-masonry": "^2.1.7",
         "react-router-dom": "^6.8.2",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.1",
