--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-responsive-masonry": "^2.1.0",
         "gh-pages": "^4.0.0"
     }
 }
