--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "axios": "^1.3.5",
         "bootstrap": "^5.1.3",
         "font-awesome": "^4.7.0",
-        "nanoid": "^4.0.1",
+        "nanoid": "^4.0.2",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
+        "react-cookie-consent": "^8.0.1",
         "react-dom": "^18.1.0",
         "react-icons": "^4.3.1",
         "react-image-gallery": "^1.2.11",
