--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
         "react-cookie-consent": "^8.0.1",
+        "react-country-region-selector": "^3.6.1",
         "react-dom": "^18.1.0",
         "react-icons": "^4.3.1",
         "react-image-gallery": "^1.2.11",
