--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
         "react-responsive-masonry": "^2.1.7",
         "react-router-dom": "^6.8.2",
         "react-router-hash-link": "^2.4.3",
-        "react-scripts": "5.0.1",
         "react-use-cart": "^1.13.0",
-        "string-strip-html": "^11.2.0",
+        "string-strip-html": "^8.5.0",
         "web-vitals": "^2.1.4"
     },
     "overrides": {
@@ -67,6 +66,7 @@
     },
     "devDependencies": {
         "@types/react-responsive-masonry": "^2.1.0",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "react-scripts": "^2.1.3"
     }
 }
