--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "^6.8.2",
         "react-router-hash-link": "^2.4.3",
         "react-use-cart": "^1.13.0",
+        "react-scripts": "^2.1.3",
         "string-strip-html": "^8.5.0",
         "web-vitals": "^2.1.4"
     },
@@ -66,7 +67,6 @@
     },
     "devDependencies": {
         "@types/react-responsive-masonry": "^2.1.0",
-        "gh-pages": "^4.0.0",
-        "react-scripts": "^2.1.3"
+        "gh-pages": "^4.0.0"
     }
 }
