--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "devDependencies": {
         "@types/react-responsive-masonry": "^2.1.0",
         "gh-pages": "^4.0.0"
+    },
+    "resolutions": {
+        "nth-check": "^2.0.1"
     }
 }
