--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
+        "test": "react-app-rewired test",
         "build-localhost": "PUBLIC-URL=/ react-scripts build",
-        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -67,7 +67,17 @@
     },
     "devDependencies": {
         "@types/react-responsive-masonry": "^2.1.0",
-        "gh-pages": "^4.0.0"
+        "assert": "^2.0.0",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "gh-pages": "^4.0.0",
+        "https-browserify": "^1.0.0",
+        "os-browserify": "^0.3.0",
+        "process": "^0.11.10",
+        "react-app-rewired": "^2.2.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.0"
     },
     "resolutions": {
         "nth-check": "^2.0.1"
