--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "^5.0.1",
         "react-use-cart": "^1.13.0",
+        "require": "^2.4.20",
         "string-strip-html": "^8.5.0",
         "web-vitals": "^2.1.4"
     },
@@ -72,9 +73,11 @@
         "crypto-browserify": "^3.12.0",
         "gh-pages": "^4.0.0",
         "https-browserify": "^1.0.0",
+        "image-minimizer-webpack-plugin": "^3.8.2",
         "os-browserify": "^0.3.0",
         "process": "^0.11.10",
         "react-app-rewired": "^2.2.1",
+        "sharp": "^0.32.1",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "url": "^0.11.0"
