--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.4.0",
         "bootstrap": "^5.1.3",
+        "firebase": "^9.22.1",
         "font-awesome": "^4.7.0",
         "nanoid": "^4.0.2",
         "prop-types": "^15.8.1",
@@ -23,6 +24,7 @@
         "react-country-region-selector": "^3.6.1",
         "react-dom": "^18.1.0",
         "react-icons": "^4.3.1",
+        "react-image-file-resizer": "^0.4.8",
         "react-image-gallery": "^1.2.11",
         "react-lazy-load-image-component": "^1.5.6",
         "react-masonry-css": "^1.0.16",
